final changes with exception handling