@@ -5,17 +5,16 @@ import com.softserve.edu.entity.Marathon;
 import com.softserve.edu.exception.MarathonNotFoundException;
 import com.softserve.edu.exception.StudentNotFoundException;
 import com.softserve.edu.service.MarathonService;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.ModelAndView;
 
-import javax.el.MethodNotFoundException;
+import java.util.NoSuchElementException;
 
 @Controller
-@RequestMapping("/marathons")
+@RequestMapping({"/", "/marathons"})
 public class MarathonController {
     private MarathonService marathonService;
 
@@ -23,13 +22,13 @@ public class MarathonController {
         this.marathonService = marathonService;
     }
 
-//    @ExceptionHandler(MyCustomException.class)
-//    public ModelAndView handleMyCustomException(MyCustomException exception){
-//        ModelAndView model = new ModelAndView("error_page");
-//        model.addObject("info", exception.getMessage());
-//        model.setStatus(HttpStatus.BAD_REQUEST);
-//        return model;
-//    }
+    @ExceptionHandler(NoSuchElementException.class)
+    public ModelAndView handleNoSuchElementException(NoSuchElementException ex) {
+        ModelAndView model = new ModelAndView("error/error_page_404");
+        model.addObject("info", ex.getMessage());
+        model.setStatus(HttpStatus.NOT_FOUND);
+        return model;
+    }
 
     @GetMapping
     public String getAllMarathons(Model model) {
@@ -38,19 +37,18 @@ public class MarathonController {
     }
 
     @GetMapping("/add")
-    String gotoMarathon(Model model) {
-        throw new MethodNotFoundException("No mapping for /marathons/add");//model.getAttribute("id").toString()
+    public String gotoMarathon(Model model) {
+        throw new NoSuchElementException("No mapping for /marathons/add");
     }
 
     @GetMapping("/edit/{id}")
     public String updateMarathon(@PathVariable long id, Model model) {
         try {
-            Marathon marathon = marathonService.findById(new Long(id).intValue());
+            Marathon marathon = marathonService.findById(Long.valueOf(id).intValue());
             model.addAttribute("marathon", marathon);
-            return "update-marathon";
+            return "marathon";
         } catch (Exception ex) {
-            throw new MarathonNotFoundException("MarathonNotFoundException: "+id);
+            throw new MarathonNotFoundException("Marathon with id = " + id + " not found");
         }
-
     }
 }
